cluster/automation-orchestrator/automation-orchestrator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automation-orchestrator
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
